# CryptoLogin

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
.github/workflows/: ci.yaml  ci.yml  docs.yaml  publish.yaml  publish.yml
cryptologin/: __init__.py  cli.py  config.py  main.py
cryptologin/api/: dependencies.py  models.py
cryptologin/api/routes/: __init__.py  auth.py  health.py  user.py  vault.py
cryptologin/client/: __init__.py  crypto_client.py
cryptologin/core/: __init__.py  constants.py  crypto_engine.py  data_vault.py  exceptions.py  user_manager.py  user_manager_v2.py
cryptologin/storage/: __init__.py  base.py  memory.py  sqlite.py  sqlite_v2.py
docs/: api_reference.md  architecture.md
examples/cli/: README.md  advanced_usage.py  basic_usage.py
examples/mobile/: App.js  README.md  package.json
examples/webapp/: README.md  app.py  requirements.txt
examples/webapp/templates/: dashboard.html  index.html
flash512-wasm/src/: flash512.c  flash512.h
tests/unit/client/: test_crypto_client.py
tests/unit/core/: test_crypto_engine.py  test_data_vault.py  test_user_manager.py  test_user_manager_v2.py
