[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptologin"
version = "2.1.1"
description = "Zero-Knowledge-Inspired · Passwordless without Password Storage Authentication System - No Email, No Password, Just Your Secret"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.10"
license = "Apache-2.0"

authors = [
    {name = "erabytse", email = "contact@fbfconsulting.org"}
]

maintainers = [
    {name = "erabytse", email = "contact@fbfconsulting.org"}
]

keywords = [
    "authentication", "security", "cryptography",
    "Storage", "passwordless", "aes-256-gcm",
    "argon2id", "fastapi"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "flash512-vanguard>=2.1.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.9"
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "httpx2>=2.0.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "isort>=5.12.0",
]
full = [
    "cryptologin[postgres]",
]

[project.urls]
Homepage = "https://erabytse.github.io/cryptologin-website/"
Documentation = "https://docs.cryptologin.io"
Repository = "https://github.com/erabytse/CryptoLogin"
Issues = "https://github.com/erabytse/CryptoLogin.git/issues"
Changelog = "https://github.com/erabytse/CryptoLogin.git/releases"

[project.scripts]
cryptologin = "cryptologin.cli:main"

[tool.setuptools.packages.find]
include = ["cryptologin*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
cryptologin = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --cov=cryptologin --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["cryptologin"]
omit = ["tests/*", "examples/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]